{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 31,
  "lineage": "188f19c7-698a-1b8a-112f-091fa831b99d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "frogtech_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125607162:internet-gateway/igw-066fd54d9a56780b9",
            "id": "igw-066fd54d9a56780b9",
            "owner_id": "211125607162",
            "tags": {
              "Environment": "terraformChamps",
              "Name": "FrogTechIGW",
              "Owner": "Zeyad Hassan"
            },
            "tags_all": {
              "Environment": "terraformChamps",
              "Name": "FrogTechIGW",
              "Owner": "Zeyad Hassan"
            },
            "vpc_id": "vpc-0261931a0ce497eff"
          },
          "dependencies": [
            "aws_vpc.frogtech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "frogtech_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-066fd54d9a56780b9",
            "id": "r-rtb-0af7691e29e3f854a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0af7691e29e3f854a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.frogtech_igw",
            "aws_route_table.frogtech_route_table",
            "aws_vpc.frogtech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "frogtech_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125607162:route-table/rtb-0af7691e29e3f854a",
            "id": "rtb-0af7691e29e3f854a",
            "owner_id": "211125607162",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "terraformChamps",
              "Name": "FrogTechRouteTable",
              "Owner": "Zeyad Hassan"
            },
            "tags_all": {
              "Environment": "terraformChamps",
              "Name": "FrogTechRouteTable",
              "Owner": "Zeyad Hassan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0261931a0ce497eff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.frogtech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "frogtech_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b129023107800970",
            "route_table_id": "rtb-0af7691e29e3f854a",
            "subnet_id": "subnet-0dd4292aacd646a33"
          },
          "dependencies": [
            "aws_route_table.frogtech_route_table",
            "aws_subnet.frogtech_subnet",
            "aws_vpc.frogtech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frogtech_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125607162:security-group/sg-0d5bfed5c06e3ae8f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d5bfed5c06e3ae8f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241024140035873000000002",
            "name_prefix": "terraform-",
            "owner_id": "211125607162",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "terraformChamps",
              "Name": "FrogTechSecurityGroup",
              "Owner": "Zeyad Hassan"
            },
            "tags_all": {
              "Environment": "terraformChamps",
              "Name": "FrogTechSecurityGroup",
              "Owner": "Zeyad Hassan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0261931a0ce497eff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.frogtech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frogtech_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125607162:subnet/subnet-0dd4292aacd646a33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd4292aacd646a33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125607162",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "terraformChamps",
              "Name": "FrogTechSubnet",
              "Owner": "Zeyad Hassan"
            },
            "tags_all": {
              "Environment": "terraformChamps",
              "Name": "FrogTechSubnet",
              "Owner": "Zeyad Hassan"
            },
            "vpc_id": "vpc-0261931a0ce497eff"
          },
          "dependencies": [
            "aws_vpc.frogtech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "frogtech_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125607162:vpc/vpc-0261931a0ce497eff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00d011c596f41e3d4",
            "default_route_table_id": "rtb-03447dbff8c1e7562",
            "default_security_group_id": "sg-0c763f1a41b288378",
            "dhcp_options_id": "dopt-03ec2cbe7b0600673",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0261931a0ce497eff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03447dbff8c1e7562",
            "owner_id": "211125607162",
            "tags": {
              "Environment": "terraformChamps",
              "Name": "FrogTechVPC",
              "Owner": "Zeyad Hassan"
            },
            "tags_all": {
              "Environment": "terraformChamps",
              "Name": "FrogTechVPC",
              "Owner": "Zeyad Hassan"
            }
          }
        }
      ]
    }
  ]
}